добавлення курсору на кнопку закриття+оверлей на картки портфоліо

--- a/css/style.css
+++ b/css/style.css
@@ -189,6 +189,7 @@ header.header {
   background-color: transparent ;
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 50%;
+  cursor: pointer;
 }
 .is-hidden {
   opacity: 1;
